Changed All Rights Reserved to All OBC Reserved, Well doing this for fun; first time here on Github via Terminal

--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
 			
 		</table>
 			<footer align='center'>
-			&copy; All Rights Reserved.	
+			&copy; All OBC Reserved.	
 			</footer>
 </body>
 </head>
