--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
 			
 		</table>
 			<footer align='center'>
-			&copy; All OBC Reserved.	
+			&copy; All rights Reserved.	
 			</footer>
 </body>
 </head>
