--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
 			
 		</table>
 			<footer align='center'>
-			&copy; All OBC Reserved.	
+			&copy; All rights Reserved.	
 			</footer>
 </body>
 </head>
